--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,15 +1,16 @@
 body{
-    background-image: url(../images/jesse-collins-amNej_JGsXg-unsplash.jpg);
-    background-size: cover;
-    background-repeat: none;
-    
+    font-family: helvetica;
+    font-size: small;
 }
-.form-container{
-    position: relative;
-    top: 12vh;
-    background:rgb(245, 222, 179);
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #000;
-    
+
+.images{
+    height: 20px;
+    width: 20px;
+}
+.logo{
+    width: 50%;
+    height: 30%;
+}
+body{
+    font-family: helvetica;
 }
