--- a/assets/css/signin.css
+++ b/assets/css/signin.css
@@ -1,11 +1,3 @@
-.images{
-    height: 20px;
-    width: 20px;
-}
-.logo{
-    width: 50%;
-    height: 30%;
-}
 .view{
     height: 20px;
     width: 20px;
@@ -16,4 +8,6 @@ span{
     right: 15px;
     transform: translate(-50%, -50%);
     top: 30px;
+    cursor: pointer;
 }
+
