--- a/sidebar.css
+++ b/sidebar.css
@@ -9,6 +9,7 @@ body{
     min-height: 100vh;
     width:100%;
     overflow: hidden;
+    font-family: helvetica;
 }
 
 .sidebar{
@@ -16,18 +17,31 @@ body{
     top: 0;
     left: 0;
     height: 100%;
-    width: 240px;
+    width: 78px;
     background: rgba(223, 0, 0, 0.842);
     padding: 6px 14px;
+    transition: all 0.5s ease;
 }
+.sidebar:active{
+    width: 240px;
 
+}
 .sidebar .logo_content .logo{
     color:fff;
     display: flex;
     height: 50px;
     width: 100%;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s ease;
+
 }
+.sidebar:active .logo_content .logo{
+    pointer-events: none;
+    opacity: 1;
+}
+
 .logo_content .logo i{
      font-size: 28px;
      margin-right: 5px;
@@ -41,7 +55,7 @@ body{
 .sidebar #btn{
     position: absolute;
     color: fff;
-    left: 90%;
+    left: 50%;
     top: 6px;
     font-size: 20px;
     height: 50px;
@@ -49,6 +63,10 @@ body{
     text-align: center;
     line-height: 50px;
     transform: translateX(-50%);
+}
+.sidebar:active #btn{
+    left: 90%;
+
 }
 .sidebar ul{
     margin-top: 20px;
@@ -62,6 +80,41 @@ body{
     margin: 0 5px;
     line-height: 50px;
 }
+.sidebar ul li .tooltip{
+    position: absolute;
+    height: 35px;
+    left: 122px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 6px;
+    width:122px;
+    line-height: 35px;
+    text-align: center;
+    background:#fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition: 0s;
+    opacity: 0;
+    pointer-events: none;
+    display: block;
+}
+.sidebar.active ul li .tooltip{
+    display: none;
+}
+.sidebar .links_name{
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s ease;
+}
+.sidebar.active .links_name{
+    opacity: 1;
+    pointer-events: auto;
+
+}
+.sidebar ul li:hover .tooltip{
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 50%;
+}
 
 .sidebar ul li a{
     color: fff;
@@ -70,6 +123,7 @@ body{
     text-decoration: none;
     transition: all 0.3s ease;
     border-radius: 12px;
+    white-space: nowrap;
 }
 .sidebar ul li a:hover{
     color: rgba(223, 0, 0, 0.842);
@@ -85,5 +139,74 @@ body{
 .sidebar .profile_content{
     position: absolute;
     color: fff;
-    
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+.sidebar .profile_content .profile{
+    position: relative;
+    padding: 10px 6px;
+    height: 60px;
+    background:rgba(250, 56, 56, 0.842);
+}
+.profile_content .profile .profile_details{
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    white-space: nowrap;
+}
+.sidebar.active .profile .profile_details{
+    opacity: 1;
+    pointer-events: auto;
+}
+.profile .profile_details img{
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+.profile .profile_details .name_job{
+    margin-left: 10px;
+}
+.profile .profile_details .name{
+    font-size: 15px;
+    font-weight: 400;
+}
+.profile .profile_details .job{
+    font-size: 12px;
+}
+.profile #log_out{
+    position: absolute;
+    left: 50%;
+    bottom: 5px;
+    transform: translateX(-50%);
+    min-width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    border-radius: 12px;
+    text-align: center;
+}
+.sidebar.active .profile #log_out{
+    left: 88%;
+
+}
+.home_content{
+    position: absolute;
+    height: 100%;
+    left: 78px;
+    width: calc(100%-78px);
+    transition: all 0.5s ease;
+}
+.home_content .text{
+    font-size: 25px;
+    font-weight: 500;
+    color:#000;
+    margin: 12px;   
+}
+
+.sidebar.active ~ .home_content{
+    left: 240px;
+    width: calc(100%-240px);
+
 }
