--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -22,7 +22,7 @@ body{
     padding: 6px 14px;
     transition: all 0.5s ease;
 }
-.sidebar:active{
+.sidebar.active{
     width: 240px;
 
 }
@@ -37,9 +37,9 @@ body{
     transition: all 0.5s ease;
 
 }
-.sidebar:active .logo_content .logo{
-    pointer-events: none;
-    opacity: 1;
+.sidebar.active .logo_content .logo{
+    opacity: 1; 
+    pointer-events: none; 
 }
 
 .logo_content .logo i{
@@ -55,8 +55,8 @@ body{
 .sidebar #btn{
     position: absolute;
     color: fff;
-    left: 50%;
     top: 6px;
+    left: 50%;
     font-size: 20px;
     height: 50px;
     width: 50px;
@@ -64,7 +64,7 @@ body{
     line-height: 50px;
     transform: translateX(-50%);
 }
-.sidebar:active #btn{
+.sidebar.active #btn{
     left: 90%;
 
 }
@@ -148,6 +148,10 @@ body{
     padding: 10px 6px;
     height: 60px;
     background:rgba(250, 56, 56, 0.842);
+    transition: all 0.4s ease;
+}
+.sidebar.active .profile_content .profile{
+    background:none;
 }
 .profile_content .profile .profile_details{
     display: flex;
@@ -186,10 +190,14 @@ body{
     font-size: 20px;
     border-radius: 12px;
     text-align: center;
+    background: none;
+    transition: all 0.4s ease;
 }
 .sidebar.active .profile #log_out{
     left: 88%;
-
+}
+.sidebar.active .profile #log_out{
+    background:rgba(250, 56, 56, 0.842);
 }
 .home_content{
     position: absolute;
